--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/api/projects/route.js", "src/app/admin/dashboard/page.js", "src/models/Project.js", "src/lib/db.js", "src/app/api/contact/update/route.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/api/projects/route.js", "src/app/admin/dashboard/page.js", "src/models/Project.js", "src/lib/db.js", "src/app/api/contact/update/route.js", "src/app/admin/page.js"],
   "exclude": ["node_modules"]
 }
